# Codex

./: CAEFrame-Comparison-and-Final-Architecture-v1.md
car_final/: CMakeLists.txt  car_pcb.capnp
car_final/include/: cae_core.hpp
car_final/include/cae/: capnp_io.hpp  db.hpp  entities.hpp  param_expr.hpp  reuse_vector.hpp  scene_adapter.hpp  spatial_index.hpp  string_pool.hpp  types.hpp  undo.hpp
car_final/src/: capnp_io.cpp  main.cpp
car_final/tests/: test_core.cpp
